# unix-x

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: build.yml  release.yml
aiux/: Cargo.toml
aiux/src/: main.rs
arcx/: Cargo.toml
arcx/src/: main.rs
astx/: Cargo.toml
astx/src/: convert.rs  lang.rs  main.rs  symbols.rs  tests.rs
benchmarks/: RESULTS.md  raw_perf.sh
confx/: Cargo.toml  README.md
confx/src/: main.rs  parse.rs
diffx/: Cargo.toml
diffx/src/: main.rs  merge.rs  merge_tests.rs
dnsx/src/: main.rs
dx/: Cargo.toml
dx/src/: diff.rs  main.rs
envx/: Cargo.toml
envx/src/: main.rs
hashx/: Cargo.toml
hashx/src/: main.rs
idx/: Cargo.toml
idx/src/: bloom.rs  bloom_tests.rs  builder.rs  client.rs  columns.rs  columns_tests.rs  daemon.rs  main.rs  query.rs
jsonx/: Cargo.toml
jsonx/src/: main.rs  query.rs  tests.rs
logx/: Cargo.toml
logx/src/: detect.rs  main.rs  parse.rs  tests.rs
lx/: Cargo.toml  README.md  build.rs
lx/src/: entry.rs  git.rs  main.rs  walk.rs
mcpx/: Cargo.toml
mcpx/src/: main.rs
memx/: Cargo.toml
memx/src/: linux.rs  macos.rs  main.rs
netx/: Cargo.toml
netx/src/: main.rs
procx/: Cargo.toml
procx/src/: cron.rs  launchd.rs  main.rs  systemd.rs
px/: Cargo.toml
px/src/: main.rs  network.rs  process.rs
statx/: Cargo.toml
statx/src/: collect.rs  main.rs  ring.rs
termx/: Cargo.toml
termx/src/: main.rs
tests/: Cargo.toml  arcx_test.rs  astx_test.rs  common.rs  confx_test.rs  diffx_test.rs  dx_test.rs  envx_test.rs  hashx_test.rs  idx_test.rs  lib.rs  logx_test.rs  lx_test.rs  mcpx_test.rs  memx_test.rs  netx_test.rs  procx_test.rs  px_test.rs  statx_test.rs  termx_test.rs
ux-output/: Cargo.toml
ux-output/src/: lib.rs  tests.rs
