[package]
name = "arcx"
version = "0.1.0"
edition = "2021"
description = "Unified archive inspection for AI agents"

[[bin]]
name = "arcx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
zip = "0.6"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "0.1"
ux-output = { path = "../ux-output" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
