[package]
name = "confx"
version = "0.1.0"
edition = "2021"
description = "Structured config-file reader for AI agents — YAML, TOML, INI, .properties to JSON"

[[bin]]
name = "confx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ux-output = { path = "../ux-output" }
serde_yaml = "0.9"
toml = "0.8"
rust-ini = "0.21"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
