[package]
name = "diffx"
version = "0.1.0"
edition = "2021"
description = "Structured three-way merge for AI agents — no text conflict markers"

[[bin]]
name = "diffx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
similar = { version = "2", features = ["inline"] }
ux-output = { path = "../ux-output" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
serde_json = "1"
