[package]
name = "dx"
version = "0.1.0"
edition = "2021"
description = "Semantic diff with structured output for AI agents"

[[bin]]
name = "dx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
similar = { version = "2", features = ["inline"] }
ignore = "0.4"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
