[package]
name = "envx"
version = "0.1.0"
edition = "2021"
description = "Structured environment & secrets inspection for AI agents"

[[bin]]
name = "envx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
regex = "1"
ux-output = { path = "../ux-output" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
