[package]
name = "hashx"
version = "0.1.0"
edition = "2021"
description = "Structured multi-algorithm file hashing for AI agents"

[[bin]]
name = "hashx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ux-output = { path = "../ux-output" }
blake3 = "1"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
rayon = "1"         # parallel hashing across multiple files
memmap2 = "0.9"    # mmap large files instead of buffered read

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
serde_json = "1"
