[package]
name = "jsonx"
version = "0.1.0"
edition = "2021"
description = "Fast JSON transform and query for AI agents"

[[bin]]
name = "jsonx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
