[package]
name = "logx"
version = "0.1.0"
edition = "2021"
description = "Structured log querying for AI agents"

[[bin]]
name = "logx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"       # .gz log reading
memchr = "2"       # fast line scanning
ux-output = { path = "../ux-output" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
