[package]
name = "lx"
version = "0.1.0"
edition = "2021"
description = "Structured filesystem metadata for AI agents"

[[bin]]
name = "lx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
git2 = { version = "0.19", default-features = false }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
ux-output = { path = "../ux-output" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
serde_json = "1"
