[package]
name = "memx"
version = "0.1.0"
edition = "2021"
description = "Structured memory inspection for AI agents — /proc/smaps, vmmap, heaps, mapped regions"

[[bin]]
name = "memx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ux-output = { path = "../ux-output" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
