[package]
name = "netx"
version = "0.1.0"
edition = "2021"
description = "Structured HTTP client for AI agents"

[[bin]]
name = "netx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json", "tls"] }
url = "2"
base64 = "0.22"
ux-output = { path = "../ux-output" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
