[package]
name = "px"
version = "0.1.0"
edition = "2021"
description = "Structured process and network inspection for AI agents"

[[bin]]
name = "px"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
libc = "0.2"
ux-output = { path = "../ux-output" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
