[package]
name = "statx"
version = "0.1.0"
edition = "2021"
description = "Time-series system stats in a circular buffer — vmstat/iostat/sar in one tool"

[[bin]]
name = "statx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
ux-output = { path = "../ux-output" }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
