[package]
name = "termx"
version = "0.1.0"
edition = "2021"
description = "Structured terminal and TTY inspection for AI agents"

[[bin]]
name = "termx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ux-output = { path = "../ux-output" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
